# ChangeLog for www-apps/phpmp2
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/phpmp2/ChangeLog,v 1.2 2006/01/09 04:27:42 weeve Exp $

  09 Jan 2006; Jason Wever <weeve@gentoo.org> phpmp2-0.11.0.ebuild:
  Added ~sparc keyword wrt bug #74951.

*phpmp2-0.11.0 (03 Jan 2006)

  03 Jan 2006; Renat Lumpau <rl03@gentoo.org> +metadata.xml,
  +phpmp2-0.11.0.ebuild:
  Initial ebuild wrt bug #74951.
