@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/phpmp2
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/phpmp2/ChangeLog,v 1.2 2006/01/09 04:27:42 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/phpmp2/ChangeLog,v 1.3 2006/01/10 02:47:33 rl03 Exp $
+
+  10 Jan 2006; Renat Lumpau <rl03@gentoo.org> phpmp2-0.11.0.ebuild:
+  Remove SVN dirs
 
   09 Jan 2006; Jason Wever <weeve@gentoo.org> phpmp2-0.11.0.ebuild:
   Added ~sparc keyword wrt bug #74951.
